# TIED

./: .gitignore  README.md  pyproject.toml  tied.toml.template
src/tied/: __init__.py  config.py  dataset.py  loss.py  model.py  smish.py
src/tied/cli/: augment.py  infer.py  train.py
